--- a/_data/custom/home-page/img.yml
+++ b/_data/custom/home-page/img.yml
@@ -29,7 +29,7 @@
 #     description-image: 'plan googleearth de la Case Bio, Coutras'
 #     text: 'Nous sommes situés au 12bis rue Edouard Vaillant, Coutras'
 #     icone-text: 'fa fa-map-marker fa-2x'
-#     lien: '/qui-sommes-nous/index.html#qui-sommes-nous-nous-situer'
+#     lien: '/informations-utiles/index.html#informations-utiles-nous-situer'
 #     description-lien: 'Retrouvez toutes nos informations détaillées'
 
 # image intergrid nb=1 max, logo ab par défaut
