--- a/_data/coll_ext/master_model/container_default-selection-produits.yml
+++ b/_data/coll_ext/master_model/container_default-selection-produits.yml
@@ -1,18 +1,25 @@
-model: 'default-promotions-slider'
+model: 'default-selection-produits'
 design_model_page: 'default-list_flex'
-design_detail_items: 'miniature-modal'
+design_detail_items: 'miniature-modal-promo'
+
 config_container_detail:
-  force_url_with_id: true
+  force_url_with_id: false
+# config_article_detail:
+# config_container_list:
+config_article_list:
+  # visible with js, or noscript, force visible
+  add_class_invisible: true
+
 # param to allow the content items to be displayed in the parent
 display_items_on_parent: false
 # how many children to display if display_items_on_parent: true on child sections
 dist_display_children: 99
 # force details items in child at a given dist
 activate_force_details: true
-dist_force_details: 1
+dist_force_details: 0
 # flag to update design model on a child, for detail items
-activate_current_model_detail_on_child: true
-force_current_model_detail_on_parent: true
+activate_current_model_detail_on_child: false
+force_current_model_detail_on_parent: false
 # config to hide page when page is displayed on a parent (display_items_on_parent=true)
 hide-page: false
 # display direct desc items, at dist 0, with priority mix > subsections_first
