--- a/_data/coll_ext/model_list-detail-items/list-detail-items.yml
+++ b/_data/coll_ext/model_list-detail-items/list-detail-items.yml
@@ -1,15 +1,15 @@
-- title : 'Derniers ajouts blog :'
+- title : 'Derniers ajouts :'
   collection: 'nos-informations'
   force_display_coll_ext: true
-  force_display_coll_ext_section: 'blog'
+  force_display_coll_ext_section: 'notre-actualite'
   # force_display_coll_ext_model: 'default-selection-produits-slider'
-  force_display_coll_ext_model: 'default-list-items-dist1'
+  force_display_coll_ext_model: 'acceuil_list_notre-actualite'
   sort :
     # available  'date-publication' | 'order' | 'title' (| 'date-evenement')
     # defined in /_data/coll_ext/config/sort_site-documents.yml
     # default : 'order'
     filter: 'date-publication'
-    nb-max-item-per-section: 20
+    nb-max-item-per-section: 5
     # choose-subsections: ['alimentation', 'sante-bien-etre']
     choose-subsections: []
     filter-subsections: ['mieux-nous-connaitre']
@@ -20,12 +20,12 @@
   force_display_coll_ext: true
   force_display_coll_ext_section: 'selection-produits'
   # force_display_coll_ext_model: 'default-selection-produits-slider'
-  force_display_coll_ext_model: 'default-selection-produits-slider-detail'
+  force_display_coll_ext_model: 'acceuil_list_selection-produits'
   sort :
     # available  'date-publication' | 'order' | 'title' (| 'date-evenement')
     # defined in /_data/coll_ext/config/sort_site-documents.yml
     # default : 'order'
-    filter: 'date-publication'
+    filter: 'date-promotion'
     nb-max-item-per-section: 2
     # choose-subsections: ['alimentation', 'sante-bien-etre']
     choose-subsections: []
