--- a/_data/coll_ext/design/UI/list_flex/models.yml
+++ b/_data/coll_ext/design/UI/list_flex/models.yml
@@ -8,6 +8,57 @@
     article: 'item_list'
     #add class case-list-unresize
     box_unresize: true
+- model: 'subsections-default'
+  config_flex:
+    grid_styling: 'Grid--gutters-m'
+    responsive: 'u-full'
+  styling:
+    container: 'list-items '
+    container_color: 'li-unresize-color02 li-extra-subsections'
+    article: 'item_list'
+    #add class case-list-unresize
+    box_unresize: true
+
+
+- model: 'acceuil-actu-subsections-dist0'
+  config_flex:
+    grid_styling: 'Grid--gutters-m'
+    responsive: 'u-full u-med-1of2-m'
+  styling:
+    container: 'list-items-no-bg'
+    container_color: 'li-unresize-no-color'
+    article: 'item_list'
+    #add class case-list-unresize
+    box_unresize: true
+    # container: 'list-items '
+    # container_color: 'li-unresize-color02 li-extra-subsections'
+    # article: 'item_list'
+    # #add class case-list-unresize
+    # box_unresize: true
+- model: 'acceuil-actu-items-dist1'
+  config_flex:
+    grid_styling: 'Grid--gutters-m'
+    responsive: 'u-full'
+  styling:
+    container: 'list-items-no-bg'
+    container_color: 'li-unresize-no-color'
+    article: 'item_list'
+    #add class case-list-unresize
+    box_unresize: true
+
+
+- model: 'acceuil-selection_produits-items-dist1'
+  config_flex:
+    grid_styling: 'Grid--gutters-m'
+    responsive: 'u-full u-small-1of2-m'
+  styling:
+    container: 'list-items-no-bg'
+    container_color: 'li-unresize-no-color'
+    article: 'item_list'
+    #add class case-list-unresize
+    box_unresize: true
+
+
 
 - model: 'selection_produits-all'
   config_flex:
@@ -19,6 +70,8 @@
     article: 'item_list'
     #add class case-list-unresize
     box_unresize: true
+
+
 
 - model: 'list-details-items-custom2'
   config_flex:
@@ -42,16 +95,9 @@
     #add class case-list-unresize
     box_unresize: true
 
-- model: 'subsections-default'
-  config_flex:
-    grid_styling: 'Grid--gutters-m'
-    responsive: 'u-full'
-  styling:
-    container: 'list-items '
-    container_color: 'li-unresize-color02 li-extra-subsections'
-    article: 'item_list'
-    #add class case-list-unresize
-    box_unresize: true
+
+
+
 
 
 - model: 'items-default-dist1'
@@ -60,7 +106,7 @@
     responsive: 'u-full u-small-1of2-m'
   styling:
     container: 'list-items'
-    container_color: 'li-resize-color02'
+    container_color: 'li-resize-color01'
     article: 'item_list'
     #add class case-list-unresize
     box_unresize: false
