--- a/_data/coll_ext/design/UI/slider/models.yml
+++ b/_data/coll_ext/design/UI/slider/models.yml
@@ -3,16 +3,18 @@
   styling:
    # ! take of type raw in palette_color list
     heading_color: 'white'
+    hide_heading_dist1: false
     slides_background: 'secondary-color-light'
     # spacing-h: 'spacing-h'
     # spacing-v: 'spacing-v'
 
 
-- model: 'default-black'
+- model: 'acceuil-selection_produits-subsections-dist0'
   type_custom: 'default'
   styling:
     # ! take of type raw in palette_color list
     heading_color: 'primary-color-dark'
-    slides_background: 'primary-color-light'
+    hide_heading_dist1: true
+    slides_background: 'none'
     # spacing-h: 'spacing-h'
     # spacing-v: 'spacing-v'
