--- a/_data/coll_ext/design/list-model_page/acceuil-selection_produits-slider.yml
+++ b/_data/coll_ext/design/list-model_page/acceuil-selection_produits-slider.yml
@@ -1,4 +1,4 @@
-model: 'default-slider-dist0'
+model: 'acceuil-selection_produits-slider'
 list-model-dist:
   - dist: 0
     list-model-type:
@@ -21,7 +21,7 @@ list-model-dist:
         design_model:
           type: 'list_flex'
           # custom: 'items-default-dist1'
-          custom: 'subsections-default-dist1-1of2'
+          custom: 'acceuil-selection_produits-items-dist1'
 
 
 
@@ -30,4 +30,4 @@ list-model-dist:
           # type: 'list_flex'
           # custom: 'subsections-default-dist1'
           type: 'list_flex'
-          custom: 'default'
+          custom: 'subsections-default'
