--- a/_data/coll_ext/master_model/container_acceuil_list_notre-actualite.yml
+++ b/_data/coll_ext/master_model/container_acceuil_list_notre-actualite.yml
@@ -1,23 +1,22 @@
-model: 'default-selection-produits'
-design_model_page: 'selection_produits-all-list-flex'
-design_detail_items: 'miniature-selection_produits'
-
+model: 'acceuil_list_notre-actualite'
+design_model_page: 'acceuil-actu-list_flex'
+design_detail_items: 'miniature-default'
 config_container_detail:
-  force_url_with_id: false
-# config_article_detail:
-# config_container_list:
-config_article_list:
-  # visible with js, or noscript, force visible
-  add_class_invisible: true
-
+  force_url_with_id: true
+config_container_list:
+  force_header_dist_0: true
 # param to allow the content items to be displayed in the parent
 display_items_on_parent: false
-# how many children to display if display_items_on_parent: true on child sections
+# how many children to display if display_items_on_parent: true on direct child sections
 dist_display_children: 99
-# force details items in child at a given dist
+# force details items in child at a given dist,
+# hide subsections with a dist sup
 activate_force_details: true
-dist_force_details: 0
-# flag to update design model on a child, for detail items
+dist_force_details: 1
+# flag to update design model on a child, for detail items,
+# if false, design model detail child = design model detail parent,
+# if true, and on child meta,  force_current_model_detail_on_parent = true,
+#   update design model on subsection
 activate_current_model_detail_on_child: false
 force_current_model_detail_on_parent: false
 # config to hide page when page is displayed on a parent (display_items_on_parent=true)
