--- a/_data/coll_ext/master_model/container_acceuil_list_selection-produits.yml
+++ b/_data/coll_ext/master_model/container_acceuil_list_selection-produits.yml
@@ -1,23 +1,28 @@
-model: 'blog-list-items'
-design_model_page: 'default-list_flex'
+model: 'acceuil_list_selection-produits'
+#design_model_page: 'subflex-sliderdetail-dist0'
+design_model_page: 'acceuil-selection_produits-slider'
 design_detail_items: 'miniature-default'
+
 config_container_detail:
   force_url_with_id: false
+
+# config_article_detail:
+config_container_list:
+  force_header_dist_0: true
+config_article_list:
+  # visible with js, or noscript, force visible
+  add_class_invisible: false
+
 # param to allow the content items to be displayed in the parent
 display_items_on_parent: false
-# how many children to display if display_items_on_parent: true on direct child sections
-dist_display_children: 20
-# force details items in child at a given dist,
-# hide subsections with a dist sup
+# how many children to display if display_items_on_parent: true on child sections
+dist_display_children: 99
+# force details items in child at a given dist
 activate_force_details: false
-dist_force_details: 0
-# flag to update design model on a child, for detail items,
-# if false, design model detail child = design model detail parent,
-# if true, and on child meta,  force_current_model_detail_on_parent = true,
-#   update design model on subsection
+dist_force_details: 1
+# flag to update design model on a child, for detail items
 activate_current_model_detail_on_child: true
-force_current_model_detail_on_parent: false
-
+force_current_model_detail_on_parent: true
 # config to hide page when page is displayed on a parent (display_items_on_parent=true)
 hide-page: false
 # display direct desc items, at dist 0, with priority mix > subsections_first
