--- a/_data/coll_ext/design/list-model_page/acceuil-avenir-list_flex.yml
+++ b/_data/coll_ext/design/list-model_page/acceuil-avenir-list_flex.yml
@@ -1,23 +1,23 @@
-model: 'acceuil-actu-list_flex'
+model: 'acceuil-avenir-list_flex'
 list-model-dist:
   - dist: 0
     list-model-type:
       - type: ["detail_items", "subsection_items", "mix_items"]
         design_model:
           type: 'list_flex'
-          custom: 'items-default'
+          custom: 'acceuil-avenir-items-dist0'
 
       - type: ["subsections"]
         design_model:
           type: 'list_flex'
-          custom: 'acceuil-actu-subsections-dist0'
+          custom: 'acceuil-avenir-subsections-dist0'
 
   - dist: 1
     list-model-type:
       - type: ["detail_items", "subsection_items", "mix_items"]
         design_model:
           type: 'list_flex'
-          custom: 'acceuil-actu-items-dist1'
+          custom: 'acceuil-avenir-items-dist1'
           # custom: 'items-default-dist1'
 
       - type: ["subsections"]
