--- a/_data/coll_ext/master_model/container_acceuil_list_a-venir.yml
+++ b/_data/coll_ext/master_model/container_acceuil_list_a-venir.yml
@@ -1,5 +1,5 @@
-model: 'acceuil_list_notre-actualite'
-design_model_page: 'acceuil-actu-list_flex'
+model: 'acceuil_list_a-venir'
+design_model_page: 'acceuil-avenir-list_flex'
 design_detail_items: 'miniature-default'
 config_container_detail:
   force_url_with_id: true
@@ -12,7 +12,7 @@ dist_display_children: 99
 # force details items in child at a given dist,
 # hide subsections with a dist sup
 activate_force_details: true
-dist_force_details: 1
+dist_force_details: 0
 # flag to update design model on a child, for detail items,
 # if false, design model detail child = design model detail parent,
 # if true, and on child meta,  force_current_model_detail_on_parent = true,
