--- a/_data/coll_ext/model_list-detail-items/list-detail-items.yml
+++ b/_data/coll_ext/model_list-detail-items/list-detail-items.yml
@@ -1,18 +1,35 @@
-- title : 'Derniers ajouts :'
+- title : 'Actualités récentes :'
   collection: 'nos-informations'
   force_display_coll_ext: true
   force_display_coll_ext_section: 'notre-actualite'
   # force_display_coll_ext_model: 'default-selection-produits-slider'
-  force_display_coll_ext_model: 'acceuil_list_notre-actualite'
+  force_display_coll_ext_model: 'acceuil_list_actu-recentes'
   sort :
     # available  'date-publication' | 'order' | 'title' (| 'date-evenement')
     # defined in /_data/coll_ext/config/sort_site-documents.yml
     # default : 'order'
     filter: 'date-publication'
+    nb-max-item-per-section: 3
+    # choose-subsections: ['alimentation', 'sante-bien-etre']
+    # 'mieux-nous-connaitre','notre-actualite'
+    choose-subsections: []
+    filter-subsections: ['mieux-nous-connaitre','evenements']
+
+- title : 'Prochainement :'
+  collection: 'nos-informations'
+  force_display_coll_ext: true
+  force_display_coll_ext_section: 'notre-actualite'
+  # force_display_coll_ext_model: 'default-selection-produits-slider'
+  force_display_coll_ext_model: 'acceuil_list_a-venir'
+  sort :
+    # available  'date-publication' | 'order' | 'title' (| 'date-evenement')
+    # defined in /_data/coll_ext/config/sort_site-documents.yml
+    # default : 'order'
+    filter: 'date-evenement'
     nb-max-item-per-section: 5
     # choose-subsections: ['alimentation', 'sante-bien-etre']
-    choose-subsections: []
-    filter-subsections: ['mieux-nous-connaitre']
+    choose-subsections: ['evenements']
+    filter-subsections: []
 
 
 - title : 'Derniers ajouts à notre sélection de produits :'
