--- a/event-config.json
+++ b/event-config.json
@@ -9,7 +9,7 @@ layout: null
   ],
   "config" :
   {
-    "class_invisible_search": "{{site.data.coll_ext.config.display_list-items.config.class_invisible }}",
+    "class_invisible_item": "{{site.data.coll_ext.config.display_list-items.config.class_invisible }}",
     "class_event_today": "{{site.data.coll_ext.config.display_list-items.config.class_event_today }}"
    }
 
